fixes and new bits
fixes:
 - wired up total() on the stats component
 - found out how to use ngClass and wired it up on the task component
 - updated task servce to use "get" in front of getter methods
 - added more tasks on the task.service (including past complete ones)
 -

 new bits
  - created a MaterialModule to house a materialInputComponent
  - created .gitignore

--- a/app/components/core/core.component.html
+++ b/app/components/core/core.component.html
@@ -1,4 +1,7 @@
 <div class="tools">
     <task-tools></task-tools>
 </div>
+
 <task-list></task-list>
+
+<material-input label="Action"></material-input>
