--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,20 @@
-button{
-    border: solid 1px #888;
-    background: dodgerblue;
-    color: white;
-    padding: 5px 10px;
+* {
+	box-sizing: border-box;
 }
 
-stats{
-    display: block;
-    margin-bottom: 10px;
+button {
+	border: solid 1px #888;
+	background: dodgerblue;
+	color: white;
+	padding: 5px 10px;
+}
+
+stats {
+	display: block;
+	margin-bottom: 10px;
+}
+
+.complete {
+	color: #afafaf;
+	text-decoration: line-through;
 }
