--- a/app/modules/langdoggler/langdoggler.css
+++ b/app/modules/langdoggler/langdoggler.css
@@ -1,10 +1,10 @@
-material-input {
+.material-input-container {
 	display: block;
 	position: relative;
 	margin-bottom: 10px;
 }
 
-material-input label {
+.material-input-container label {
 	color: #c9c9c9;
 	cursor: text;
 	font-family: arial;
@@ -17,7 +17,7 @@ material-input label {
 	user-select: none;
 }
 
-material-input input[type=text] {
+.material-input-container input[type=text] {
 	border: 1px solid transparent;
 	border-bottom: 1px solid #c9c9c9;
 	box-shadow: 0;
@@ -29,17 +29,23 @@ material-input input[type=text] {
 	width: 100%;
 }
 
-material-input.focused label {
+.material-input-container.focused label {
 	color: #00b;
 }
 
-material-input.focused label, material-input.populated label {
+.material-input-container.focused label,
+.material-input-container.populated label {
 	font-size: 0.70em;
 	left: 7px;
+	cursor: default;
 	top: 0;
 }
 
-material-input.focused input[type=text] {
+.material-input-container:not(.populated) label {
+	pointer-events: none;
+}
+
+.material-input-container.focused input[type=text] {
 	outline: 0;
 	border-bottom: 1px solid transparent;
 	box-shadow: inset 0 -2px 0 #0000bb;
